nodejs-simple-rest-service-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodejs-simple-rest-service
spec:
  selector:
    app: nodejs-simple-rest
  type: NodePort
  ports:
    - name: nodejs-simple-rest-port
      port: 3000
      targetPort: 3000
