nodejs-simple-rest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodejs-simple-rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nodejsapi
        backend:
          serviceName: nodejs-simple-rest-service
          servicePort: 3000
